# data-stack

./: .gitignore  README.md  pyproject.toml  requirements.txt
dashboards/: pl_shots_dashboard.py
data/: pl_goals_fetch_understat.py  pl_shots_fetch_understat.py
data-science/: pokemon_predict_legendary.py  predict_legendary.py
data_stack/: README.md  pyproject.toml
data_stack/src/data_stack/: crew.py  main.py
dbt/: dbt_project.yml  profiles.yml
dbt/models/marts/: mart_legendary_comparison.sql  mart_legendary_comparison.yml  mart_pokemon_by_generation.sql  mart_pokemon_by_generation.yml  mart_pokemon_by_type.sql  mart_pokemon_by_type.yml
dbt/models/staging/: _sources.yml  stg_pokemon.sql  stg_pokemon.yml
notebooks/: pl_shots_analytics.ipynb  pokemon_analytics.ipynb
tests/: conftest.py  test_pl_goals_fetch_understat.py  test_pl_shots_dashboard.py  test_pl_shots_fetch_understat.py
