[project]
name = "data_stack"
version = "0.1.0"
description = "data-stack using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.1"
]

[project.scripts]
data_stack = "data_stack.main:run"
run_crew = "data_stack.main:run"
train = "data_stack.main:train"
replay = "data_stack.main:replay"
test = "data_stack.main:test"
run_with_trigger = "data_stack.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
